<resources>
    <string name="app_name">IstTabletCrm</string>
    <string name="product_list_all">Product List All</string>
    <string name="toast_error">Hata!</string>
    <string name="user_login">User Login</string>
    <string name="breakdown_type_list_all">BreakdownType List All</string>
    <string name="account_all">Account All</string>
    <string name="elevator_list_all">Elevator List All</string>
    <string name="dummy_user_name">İsim Soyad</string>
    <string name="dummy_info">Lorem ipsum dolor sit amet, consectetur adipi frn nibh viverra lectus volutpat posuere ut in libero. Aenean eget nunc varius, blandit ipsum et, egestas massa.</string>
    <string name="dummy_info_short">Lorem ipsum dolor sit amet, um et, egestas massa.</string>
    <string name="servis">Servis</string>
    <string name="circle_text">5</string>
    <string name="mesaj">Mesaj Kutusu</string>
    <string name="siparis">Sipariş</string>
    <string name="musteri">Müşteri</string>
    <string name="musteri_urun">Müşteri Ürün</string>
    <string name="gorseller">Görseller</string>
    <string name="mobil_konum">Mobil Konum</string>
    <string name="yillik">Yıllık Muayene</string>
    <string name="dummy_date">12.09.2018 / 12:24</string>
    <string name="az">Az</string>
    <string name="bakim">Bakım</string>
    <string name="yuksek">Yüksek</string>
    <string name="modern">Modernizasyon</string>
    <string name="orta">Orta</string>
    <string name="ariza">Arıza</string>
    <string name="yedek">Yedek Parça Değişimi</string>
    <string name="egitmen">Eğitmen</string>
    <string name="isemirlerim">İş Emirlerim</string>
    <string name="is_tipi">İş Tipi</string>
    <string name="konusu">Konusu</string>
    <string name="bas_tarih">Başlangıç Tarihi</string>
    <string name="bit_tarih">Bitiş Tarihi</string>
    <string name="oncelik">Öncelik</string>
    <string name="servis_raporu">Servis Raporu</string>
    <string name="isemri_tamamla">İş Emrini Tamamla</string>
    <string name="iptal">İptal Et</string>
    <string name="kaydet">Kaydet</string>
    <string name="yeni">Yeni</string>
    <string name="firma_ismi">Firma İsmi</string>
    <string name="dummy_firma">Metsa Makine</string>
    <string name="asansor_no">Asansör No</string>
    <string name="isemri_tipi">İş Emri Tipi</string>
    <string name="dummy_no">121897641</string>
    <string name="devam_ediyor">İşlem Devam Ediyor</string>
    <string name="usta_adi">Usta Adı</string>
    <string name="dummy_usta">Jonathan Chen</string>
    <string name="randevu_tarih">Randevu Tarihi</string>
    <string name="dummy_tarih">12.05.2018</string>
    <string name="supervisor">İlgili Süpervisor</string>
    <string name="dummy_usta_2">David James</string>
    <string name="ise_baslama">İşe Başlama Tarihi</string>
    <string name="ariza_nedini">Arıza Nedeni</string>
    <string name="acikmala_not">Açıklama/ Not:</string>
    <string name="is_kapatma">İş Kapatma</string>
    <string name="oncelik_durumu">Öncelik Durumu</string>
    <string name="malzeme_icerik">Malzeme İçerik</string>
    <string name="iscilik_ekle">İşçilik Ekle</string>
    <string name="kontrol_listesi">Kontrol Listesi</string>
    <string name="kod">Kod</string>
    <string name="urun_adi">Ürün Adı</string>
    <string name="miktar">Miktar</string>
    <string name="birim">Birim</string>
    <string name="stok_durumu">Stok Durumu</string>
    <string name="garanti_durumu">Garanti Durumu</string>
    <string name="faturalandiralacakmi">Faturalandırılacak mı?</string>
    <string name="urun_dahilindemi">Ürün Dahilinde mi?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="aciklama">Açıklama</string>
    <string name="takvim">Takvim</string>
    <string name="action_today">Bugün</string>
    <string name="action_day_view">Günlük</string>
    <string name="action_three_day_view">3 günlük</string>
    <string name="action_week_view">Haftalık</string>
    <string name="dummy_date2">19-25 Kasım 2018</string>
    <string name="bugün">Bugün</string>
    <string name="geri">Geri</string>
    <string name="ileri">İleri</string>
    <string name="yeni_isemri">Yeni İş Emri Oluşturma</string>
    <string name="isemri">Yeni İş Emri</string>
    <string name="musteri_adi">Müşteri Adı</string>
    <string name="konu">Konu</string>
    <string name="asansor">Asansör</string>
    <string name="apart_adi">Apartman İsmi</string>
    <string name="motorda_catlak">Motorda çatlak var</string>
    <string name="blok_makine">1-A Block Makine</string>
    <string name="saat">Saat Gösterme Şekli</string>
    <string name="oncekiis">Önceki İş Emri</string>
    <string name="isemrii">İş Emri</string>
    <string name="konum">Konum</string>
    <string name="normal">Normal</string>
    <string name="sahibi">Sahibi</string>
    <string name="isimsoyad">İsim Soyad</string>
    <string name="sonraki_is_not">Sonraki İş Emrine Not</string>
    <string name="asansor_name">12 B  Block Makine</string>
    <string name="genel">Genel Bilgiler</string>
    <string name="ozellikler">Özellikler</string>
    <string name="asansoradi">Asansör Adı</string>
    <string name="ikinokta">:</string>
    <string name="apartadi">Site / Apartman Adı</string>
    <string name="emlak">Emlak Yönetim Siteleri</string>
    <string name="blokb">B Blok</string>
    <string name="blokadi">Blok Adı</string>
    <string name="pan">Panaromik mi?</string>
    <string name="tek">Makina Dairesiz</string>
    <string name="tektanım">Asansör Teknik Tanımı</string>
    <string name="etiket">Etiket Rengi</string>
    <string name="cizgi">-</string>
    <string name="soztarih">Sözleşme Bitim Tarihi</string>
    <string name="asmak">Asansörün Makinesi</string>
    <string name="asanlik">Asansör Anlık Durum</string>
    <string name="ashiz">Asansörün Hizmet Yılı</string>
    <string name="adsoyad">Ad Soyad</string>
    <string name="assorun">Asansörün Arızasındaki Sorun</string>
    <string name="asfirma">Asansörü Yaptıran Firma</string>
    <string name="askimlik">Asansör Kimlik Numarası</string>
    <string name="kapasite">Taşıma Kapasitesi</string>
    <string name="sinif">Sınıf</string>
    <string name="kat">Kat Sayısı</string>
    <string name="seri">Asansör Seri Numarası</string>
    <string name="durak">Durak Sayısı</string>
    <string name="hiz">Asansör Hızı</string>
    <string name="sinif1">Sınıf 1</string>
    <string name="servapplistall">Servapp ListAll</string>
    <string name="elevetor_getbyid">Elevator GetbyId</string>
    <string name="servappbyid">ServApp ById</string>
    <string name="ServFormById">ServFormById</string>
    <string name="giris">Giriş</string>
    <string name="nickname">Kullanıcı Adı</string>
    <string name="pass">Şifre</string>
    <string name="rememberme">Beni Hatırla</string>
    <string name="forgot_pass">Şifremi Unuttum</string>
    <string name="error_nick">Kullancı Adı Girilmedi</string>
    <string name="error_pass">Şifre Girilmedi</string>
    <string name="girisyap">Giriş Yap</string>
    <string name="isemrleri">İş Emirleri</string>
    <string name="duyurular">Duyurular</string>
    <string name="urunkatalogu">Ürün Kataloğu</string>
    <string name="bilgilendrme">Bilgilendirme</string>
    <string name="teknik_dokumanlar">Teknik Dökümanlar</string>
    <string name="dummy_aprt">Deniz Aprt B Blok</string>
    <string name="oncekisonraki">Önceki Ve Sonraki Görünümü</string>
    <string name="dummy_kod">CHPSTTWERK</string>
    <string name="cblok">C Blok</string>
    <string name="arizakodu">Arıza Kodu</string>
    <string name="arizaoncesi">Arızadan Önceki Görünüm</string>
    <string name="foto_ekle">Fotoğraf Ekle</string>
    <string name="baslangic">Başlangıç</string>
    <string name="dokumanara">Döküman Ara</string>
    <string name="incele">İncele</string>
    <string name="altkategori">Alt Kategori</string>
    <string name="date2">12.09.2018</string>
    <string name="dummy_clock">12:25</string>
    <string name="qr_tarat">asansördeki QR kodunu taratın</string>
    <string name="qr_checkin">Check in yapmak için</string>
    <string name="ariza_nedeni">Arıza Nedeni?</string>
    <string name="listeye_don">Listeye Dön</string>
    <string name="ariza_kaydi_alindi">Arıza kaydınız alındı</string>
    <string name="uygunsuzluk">Uygunsuzluk Bildirimi</string>
    <string name="baslik">Başlık</string>
    <string name="tarih">Tarih</string>
    <string name="yeni_uygunsulzuk">Yeni Uygunsuzluk Bildirimi</string>
    <string name="gonder">Gönder</string>
    <string name="parca_ekle">Parça Ekleme</string>
    <string name="ana_urun">Ana Ürün Grubu</string>
    <string name="urun_ara">Ürün Ara</string>
    <string name="butonlar">Butonlar</string>
    <string name="butonkodu">TRBTN130048</string>
    <string name="anagrubuac">Ana Ürün Gurubunu Aç</string>
    <string name="altgrubuac">Alt Ürün Gurubunu Aç</string>
    <string name="buton">Buton</string>
    <string name="xadeturun">0 Adet Ürün</string>
    <string name="isemritipi">İş Emri tipi</string>
    <string name="add_sub_servapp">Alt İş Emri Ekle</string>
    <string name="add_new_pieces">Yeni Malzeme Ekle</string>
    <string name="new_ware">Yeni Stok</string>
    <string name="stok_info">Stok Bilgisi</string>
    <string name="talep">Taleplerim</string>
    <string name="depo">Depo</string>
    <string name="transfer_tipi">Transfer Tipi</string>
    <string name="onay_durumu">Onay Durumu</string>
    <string name="cikis_depo">Çıkış Yapılacak Depo</string>
    <string name="gonderilecek_depo">Gönderilecek Depo</string>
    <string name="ekle">Ekle</string>
    <string name="video_ekle">Video Ekle</string>
    <string name="arizasonrasi">Arızadan Sonraki Görünüm</string>
    <string name="new_warehouse_request">Yeni Stok Talebi Oluşturma</string>
    <string name="hurdaya">Hurdaya Çıkart</string>
    <string name="isteniledepo">İstenilen Depo</string>
    <string name="cikis_depoo">Çıkış Yapılacak Depo</string>
    <string name="hurdanedeni">Hurda Nedeni</string>
    <string name="malzemelistesi">Değişen Malzeme Listesi</string>
    <string name="servistalep">Servis Talepleri</string>
    <string name="malzeme">Malzeme</string>
    <string name="degisim_tarihi">Değişim Tarihi</string>
    <string name="garantibitis">Garanti Bitiş Tarihi</string>
    <string name="servistipi">Servis Tipi</string>
    <string name="statu">Statü</string>
    <string name="oncekigun">Önceki Gün</string>
    <string name="sonrakigun">Sonraki Gün</string>
    <string name="loading">Yükleniyor...</string>
    <string name="sure">Emin misiniz?</string>
    <string name="doit">Evet Uygula</string>
    <string name="dont">Hayır İptal Et</string>
    <string name="close_servapp">İş Emri Kapatma İşlemi</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="succes">Başarılı</string>
    <string name="ucretli_ucretsiz">Ücretli/Ücretsiz</string>
    <string name="dis_hizmet">Dış Hizmet Eklensin mi?</string>
    <string name="dis_hizmet_ekle">Dış Hizmet Ekle</string>
    <string name="superv">Supervisor</string>
    <string name="duyuru">Duyuru</string>
    <string name="malzemekodu">Malzeme Kodu</string>
    <string name="garantibaslangic">Garanti Başlangıç Tarihi</string>
    <string name="sure2">Süre</string>
    <string name="serino">Seri No</string>
    <string name="baglioldugu">Bağlı Olduğu İş Emri</string>
    <string name="serinumarasi">Seri Numarası</string>
    <string name="iadenedeni">İade Nedeni</string>
    <string name="iadeet">İade Et</string>
    <string name="urun_anakodu">Ürün Ana Kodu</string>
    <string name="urunaltkodu">Ürün Alt Kodu</string>
    <string name="ururntanim">Ürün Tanım Kodu</string>
    <string name="eklenenarizalar">Eklenen Arızalar</string>
    <string name="cikart">Çıkart</string>
</resources>