<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/padding_rigt32"
    android:layout_marginTop="@dimen/padding_top25"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kod"
        android:textAllCaps="true"
        android:textColor="@color/btn_dark_blue"
        android:textSize="@dimen/menu_text_16"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin120"
        android:text="@string/urun_adi"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/menu_text_16"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin60"
        android:text="@string/miktar"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/menu_text_16"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin50"
        android:text="@string/birim"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/menu_text_16"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin50"
        android:text="@string/stok_durumu"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/menu_text_16"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin50"
        android:text="@string/garanti_durumu"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/menu_text_16"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin30"
        android:text="@string/faturalandiralacakmi"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/menu_text_16"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin30"
        android:text="@string/urun_dahilindemi"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/menu_text_16"
        android:textStyle="bold" />
</LinearLayout>