<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/detay_menu_75"
    android:orientation="horizontal">

    <TextView

        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/detay_menu_30"
        android:layout_weight="2"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/kod"
        android:textAllCaps="true"
        android:textColor="@color/text_color_3"
        android:textSize="@dimen/menu_text_16"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_descp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/detay_menu_30"
        android:layout_weight="10"
        android:text="@string/urun_adi"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/menu_text_16"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_see"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/detay_menu_30"
        android:layout_weight="3"
        android:background="@drawable/btn_konum_rounded"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/incele"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_menu_18"
        android:textStyle="bold" />


</LinearLayout>