<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detay_menu_70"
        android:background="@color/malzeme_icerik">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin30"
            android:layout_marginEnd="@dimen/margin30"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/detay_menu_12"
                android:layout_weight="1"
                android:text="@string/servistipi"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_menu_14"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/detay_menu_12"
                android:layout_weight="1"
                android:text="@string/tarih"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_menu_14"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/detay_menu_12"
                android:layout_weight="1"
                android:text="@string/usta_adi"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_menu_14"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/detay_menu_12"
                android:layout_weight="1"
                android:text="@string/statu"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_menu_14"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/detay_menu_12"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_menu_14" />


            <Spinner
                android:id="@+id/spn_statu"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/spn_style"
                android:paddingStart="@dimen/detay_menu_25"
                android:paddingEnd="@dimen/detay_menu_12"
                android:prompt="@string/isemritipi" />


        </LinearLayout>


    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_talep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detay_menu_8"
        android:layout_marginBottom="8dp"
        android:minHeight="@dimen/m200"></android.support.v7.widget.RecyclerView>
</LinearLayout>