<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >


    <RelativeLayout
        android:layout_width="@dimen/isemri_left_width"
        android:layout_height="@dimen/isemri_left_height"
        android:background="@drawable/isemri_modern">

        <TextView
            android:textColor="@color/white"
            android:id="@+id/txt_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_medium"
            android:text="1"
            android:textSize="@dimen/text_menu_18" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/isemri_icon_iv"
        android:layout_marginEnd="@dimen/detay_menu_12"
        android:background="@drawable/ic_modern" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_yillik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/detay_menu_12"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/modern"
            android:textColor="@color/text_color"
            android:textSize="@dimen/isemri_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_yillik_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/dummy_aprt"
            android:textColor="@color/text_color"
            android:textSize="@dimen/isemri_text" />
    </LinearLayout>


    <TextView
        android:id="@+id/txt_info"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:gravity="center|left"
        android:text="@string/dummy_info_short"
        android:textColor="@color/text_color"
        android:textSize="@dimen/isemri_text" />

    <TextView
        android:id="@+id/txt_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/dummy_date"
        android:textColor="@color/text_color"
        android:textSize="@dimen/isemri_text" />

    <TextView
        android:id="@+id/txt_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/dummy_date"
        android:textColor="@color/text_color"
        android:textSize="@dimen/isemri_text" />

    <TextView
        android:id="@+id/txt_oncelik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:drawableRight="@drawable/ic_az"
        android:text="@string/az"
        android:textColor="@color/text_color"
        android:textSize="@dimen/isemri_text" />

</LinearLayout>